# pony_intellisense_cli

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  ROADMAP.md  lex  make_ast_md.sh
include/: ExpressionTypeResolver.hpp  PonyType.hpp  TypeResolver.hpp  ast_transformations.hpp  dump_ast.hpp  dump_scope.hpp  get_symbol.hpp  logging.hpp  main.hpp  ponyc_includes.hpp  pos.hpp
protocols/: scope.proto
src/: ExpressionTypeResolver.cpp  PonyType.cpp  TypeResolver.cpp  ast_transformations.cpp  ast_transformations.hpp  cli_opts.hpp  dump_ast.cpp  dump_scope.cpp  dump_scope.hpp  get_symbol.cpp  main.cpp  ponyc_includes.hpp  pos.cpp  pos.hpp  textlevel.cpp
